# dfm

./: .gitignore  AGENTS.md  DESIGN.md  README.md  TODO.md  pyproject.toml
examples/: unconditional_sampling.py
examples/stability_guidance/: main.py
scripts/: conditional_scoring.py  unconditional_sampling.py
scripts/stability_guidance_demo/: main.py
src/dfm/: __init__.py  data.py  generative_model.py  generative_modeling.py  guide.py  predictive_model.py  predictive_modeling.py  probability_model.py  sampling.py
src/dfm/models/: __init__.py  esm.py  seki_tyrosine_kinase.py  stability_predictor.py  utils.py
src/dfm/models/rocklin_ddg/: guidance_utils.py  stability_predictor.py
tests/: test_esm.py  test_guidance_data.py  test_logit_formatter.py  test_transition_model.py
